# rsc-2024-example-py-package

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt
.github/workflows/: sphinx.yml
docs/source/: conf.py  index.rst
docs/source/_autosummary/: civeng.geotechnics.hello_geotechnics.rst  civeng.geotechnics.rst  civeng.structures.hello_structures.rst  civeng.transport.hello_transport.rst
src/civeng/: __init__.py  structures.py  transport.py
src/civeng/geotechnics/: __init__.py
